done with some edits

--- a/Views/Customer/Details.cshtml
+++ b/Views/Customer/Details.cshtml
@@ -9,7 +9,7 @@
 <h1>Customer Details</h1>
 
 <ul>
-    <li>@Model.CustomerCivilId</li>
+    <li>Civil ID: @Model.CustomerCivilId</li>
     <li>@Model.CustomerEmail</li>
     <li>@Model.CustomerName</li>
     <li>@Model.CustomerPhone</li>
