--- a/Views/Employee/Register.cshtml
+++ b/Views/Employee/Register.cshtml
@@ -1,19 +1,23 @@
 ﻿<h1>Add Employee</h1>
 <form method="post" action="/Employee/Register">
+    <div>
 <label for="name">First Name: </label>
 <input type="text" id="FirstName" name="firstName" required />
+    </div>
 
-
+    <div>
 <label for="name">Last Name: </label>
 <input type="text" id="LastName" name="lastName" required />
+    </div>
 
-
+    <div>
 <label for="name">Email: </label>
 <input type="text" id="Email" name="email" required />
+    </div>
 
-
+    <div>
 <label for="name">Department: </label>
 <input type="text" id="Department" name="department" required />
-
+    </div>
 <button type="submit">Add</button>
 </form>
