Done with all Tasks include Validation

--- a/Views/Employee/Details.cshtml
+++ b/Views/Employee/Details.cshtml
@@ -7,9 +7,8 @@
 <h1>Employee Details</h1>
 
 <ul>
-    <li>@Model.EmployeeId</li>
-    <li>@Model.Email</li>
-    <li>@Model.Department</li>
-    <li>@Model.FirstName</li>
-    <li>@Model.LastName</li>
+    <li>ID: @Model.EmployeeId</li>
+    <li>Email: @Model.Email</li>
+    <li>Department: @Model.Department</li>
+    <li>Name: @Model.FirstName @Model.LastName</li>
 </ul>
